<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cock Tail</string>
    <string name="action_settings">Settings</string>
    <string name="cocktails_dialog_loading">Retrieving cocktails ...</string>
    <string name="action_favoris">Favoris</string>
    <string name="cocktail_added_to_fav">Cocktail added to your favorites</string>
    <string name="cocktail_already_exists_in_fav">This cocktail already exists in your favourites</string>
    <string name="confirm_title_add_to_favourite">Confirmation</string>
    <string name="confirm_title_add_to_favourite_question">Are you sure to add this cocktail to your favs ?</string>
    <string name="failed_to_retrieve_cocktails">Failed to retrieve cocktails</string>
    <string name="removeFromFavourite">Remove from favourites</string>
    <string name="cocktail_not_found">Cocktail not found</string>
    <string name="cocktail_removed_from_favourites">Cocktail removed from favourite</string>
    <string name="cocktail_name">Nom:</string>
    <string name="cocktail_color">Couleur:</string>
    <string name="cocktail_base">Base:</string>
    <string name="cocktail_alcohol">Alcool:</string>
    <string name="cocktail_ingredients">Ingredients:</string>
    <string name="cocktail_description">Description:</string>

</resources>
