<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/lbNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cocktail_name"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/cocktailNameTextView"
        android:text="CocktailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbNom"
        android:layout_alignBaseline="@+id/lbNom"/>

    <ImageView
        android:id="@+id/favouriteImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/cocktailColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cocktail_color"
        android:layout_below="@+id/lbNom"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CocktailColor"
        android:id="@+id/cocktailItemColorTextView"
        android:layout_below="@+id/lbNom"
        android:layout_toRightOf="@+id/cocktailColorLabel"
        android:layout_toEndOf="@+id/cocktailColorLabel"
        android:layout_alignBaseline="@+id/cocktailColorLabel"/>

    <TextView
        android:id="@+id/cocktailBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cocktail_base"
        android:layout_below="@+id/lbColor"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/cocktailItemBaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CocktailBase"
        android:layout_toRightOf="@+id/lbBase"
        android:layout_below="@+id/lbColor"
        android:layout_alignBaseline="@+id/lbBase"/>

    <TextView
        android:id="@+id/cocktailAlcohol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cocktail_alcohol"
        android:layout_below="@+id/lbBase"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/cocktailItemAlcoolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbBase"
        android:layout_toRightOf="@+id/lbAlcool"
        android:text="CocktailAlcool"
        android:layout_alignBaseline="@+id/lbAlcool"/>

    <TextView
        android:id="@+id/lbIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbAlcool"
        android:text="@string/cocktail_ingredients"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/cocktailIngredientTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbAlcool"
        android:layout_toRightOf="@+id/lbIngredient"
        android:text="CocktailIngredient"
        android:layout_alignBaseline="@+id/lbIngredient"/>

    <TextView
        android:id="@+id/cocktailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbIngredient"
        android:text="@string/cocktail_description"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/cocktailItemDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbIngredient"
        android:layout_toRightOf="@+id/lbDescription"
        android:text="CocktailDescription"
        android:layout_alignBaseline="@+id/lbDescription"/>

 <!--   <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AddFavorite"
        android:id="@+id/toggleButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textOn="Supprimer"
        android:textOff="Ajouter"/>-->

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/cocktailItemImageTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
            android:id="@+id/removeFromFavouritesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


</RelativeLayout>